fix home page box widths on iphone

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -108,7 +108,7 @@
 @media (max-width: $mediaquery__appNav--hidden) {
 
     .highlights {
-        flex-wrap: wrap;
+        display: block;
         padding: 1em 0;
     }
 
